// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correct messages when cart has items 1`] = `
<CartTableSummary
  cart={
    Object {
      "channel": "web",
      "created_at": "2019-01-07T14:28:02Z",
      "discount_summaries": Array [
        Object {
          "id": "2918ed5e-2515-4603-b22f-aa1487304f05",
          "name": "£1.50 off all orders",
          "promotion_id": 21,
          "total": 1.5,
        },
      ],
      "email": "",
      "free_shipping": false,
      "id": 151,
      "line_items": Array [
        Object {
          "cart_id": 151,
          "container_id": 151,
          "gift": false,
          "id": "311",
          "item": Object {
            "available_to_browse": true,
            "available_to_order": true,
            "created_at": "2018-09-24T15:43:00Z",
            "current_price": 6.77,
            "deleted_at": null,
            "description": "Product 40 - variant 1 Grown at an altitude of 4, 500 feet, the tea bush 'wakes' after the winter in April and produces delicate white buds, which often have a white down on them.They are picked by hand and sun- dried so that fermentation cannot take place. Very little white tea is produced, as this process requires particular care, increasing its rarity and making it highly sought after by tea buyers all over the world. It has a delicate flavour, so is best drunk without milk.",
            "ewis_eligible": false,
            "has_assets": true,
            "id": "321",
            "meta_attributes": Object {},
            "ordered_total": 10,
            "picture_url": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/131/1537803713.5364385-SCS-04-CJ_coffee_jug_600ml.jpg",
            "price": 6.77,
            "price_includes_taxes": true,
            "product": Object {
              "attribute_merchandising": Object {},
              "available_to_browse": true,
              "average_rating": 0,
              "canonical_path": "/jugs/seed_product_40",
              "category_ids_cache": Array [
                57,
              ],
              "content_type": "html",
              "created_at": "2018-09-24T15:43:00Z",
              "description": "Grown at an altitude of 4,500 feet, the tea bush 'wakes' after the winter in April and produces delicate white buds, which often have a white down on them. They are picked by hand and sun-dried so that fermentation cannot take place. Very little white tea is produced, as this process requires particular care, increasing its rarity and making it highly sought after by tea buyers all over the world. It has a delicate flavour, so is best drunk without milk.",
              "ewis_status": "not_ewis_eligible",
              "has_assets": true,
              "id": "164",
              "max_current_price": 90.31,
              "max_price": 90.31,
              "merchandised": true,
              "merged_attribute_merchandising": Object {},
              "meta_attributes": Object {},
              "min_current_price": 6.77,
              "min_price": 6.77,
              "picture_url": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/131/1537803713.5364385-SCS-04-CJ_coffee_jug_600ml.jpg",
              "published": true,
              "rating": 0,
              "reference": "seed_product_40",
              "sellable": true,
              "seo_meta_description": "Product 40 - Qui sed maiores occaecati.",
              "seo_meta_keywords": "minus, ut, ut, adipisci, consequatur",
              "seo_meta_title": "SCS-04-CJ coffee jug 600ml",
              "slug": "jugs/seed_product_40",
              "title": "SCS-04-CJ coffee jug 600ml",
              "updated_at": "2018-11-21T10:16:59Z",
              "web_product_description": "Product 40 - Totam aut quo facere.",
              "web_product_name": "SCS-04-CJ coffee jug 600ml",
            },
            "product_id": 164,
            "reference": "est_36_1",
            "sku": "3008557600817",
            "stock_allocated_level": 15,
            "stock_available_level": 85,
            "stock_level": 100,
            "tax_code": "vat",
            "title": "Variant 1",
            "updated_at": "2018-11-20T13:18:46Z",
          },
          "item_id": 321,
          "item_type": "Variant",
          "line_item_discounts": Array [
            Object {
              "id": "2a720d8d-ae39-462e-b2e2-4c49ca5c8846",
              "line_item_number": 1,
              "promotion_id": 21,
              "total": 1.5,
            },
          ],
          "sku": "3008557600817",
          "stock_available_level": 85,
          "sub_total": 6.77,
          "tax": 0.88,
          "tax_rate": "0.2",
          "title": "Variant 1",
          "total": 5.27,
          "total_discount": 1.5,
          "unit_price": 6.77,
          "unit_quantity": 1,
        },
      ],
      "line_items_count": 2,
      "meta_attributes": Object {},
      "shipping_method": Object {
        "total": 3.45,
      },
      "shipping_total": 3.45,
      "shipping_total_discount": 0,
      "sub_total": 6.77,
      "tax": 0.88,
      "test": false,
      "total": 5.27,
      "total_discount": 1.5,
      "updated_at": "2019-01-07T14:32:05Z",
    }
  }
  className="dummy-classname"
  loading={false}
>
  <section
    className="dummy-classname c-cart-summary"
  >
    <dl>
      <dt>
        <a>
          Total Price:
        </a>
      </dt>
      <dd>
        <a>
          £
          6.77
        </a>
      </dd>
    </dl>
    <dl
      className="c-cart-summary__promotion"
      key="2918ed5e-2515-4603-b22f-aa1487304f05"
    >
      <dt>
        £1.50 off all orders
      </dt>
      <dd>
        - £
        1.50
      </dd>
    </dl>
    <dl>
      <dt>
        <a>
          Shipping: £3.45
        </a>
      </dt>
    </dl>
    <dl>
      <dt>
        <p
          className="u-bold"
        >
          TOTAL:
        </p>
      </dt>
      <dd>
        <p
          className="u-bold"
        >
          £
          5.27
        </p>
      </dd>
    </dl>
    <dl>
      <a>
        * Including VAT
      </a>
    </dl>
  </section>
  <section
    className="dummy-classname c-cart-summary-buttons"
  >
    <Link
      as="/"
      className="o-button--sml c-cart-summary-buttons__cta c-cart-summary-buttons__cta--continue"
      href="/slug?slug=/homepage"
    >
      <a
        as="/"
        className="o-button--sml c-cart-summary-buttons__cta c-cart-summary-buttons__cta--continue"
        href="/slug?slug=/homepage"
      >
        Continue Shopping
      </a>
    </Link>
    <Link
      className="o-button--sml c-cart-summary-buttons__cta c-cart-summary-buttons__cta--proceed"
      href="/checkout/payment-method"
    >
      <a
        className="o-button--sml c-cart-summary-buttons__cta c-cart-summary-buttons__cta--proceed"
        href="/checkout/payment-method"
      >
        Checkout
      </a>
    </Link>
  </section>
</CartTableSummary>
`;

exports[`renders correct messages when cart has no shipping method 1`] = `
<CartTableSummary
  cart={
    Object {
      "discount_summaries": Array [],
      "line_items": Array [],
      "line_items_count": 2,
      "sub_total": 10,
      "total": 10,
    }
  }
  cheapestShipping={
    Object {
      "total": 5,
    }
  }
  loading={false}
>
  <section
    className="c-cart-summary"
  >
    <dl>
      <dt>
        <a>
          Total Price:
        </a>
      </dt>
      <dd>
        <a>
          £
          10.00
        </a>
      </dd>
    </dl>
    <dl>
      <dt>
        <a>
          Shipping from: £5
        </a>
      </dt>
    </dl>
    <dl>
      <dt>
        <p
          className="u-bold"
        >
          TOTAL:
        </p>
      </dt>
      <dd>
        <p
          className="u-bold"
        >
          £
          15.00
        </p>
      </dd>
    </dl>
    <dl>
      <a>
        * Including VAT
      </a>
    </dl>
  </section>
  <section
    className="c-cart-summary-buttons"
  >
    <Link
      as="/"
      className="o-button--sml c-cart-summary-buttons__cta c-cart-summary-buttons__cta--continue"
      href="/slug?slug=/homepage"
    >
      <a
        as="/"
        className="o-button--sml c-cart-summary-buttons__cta c-cart-summary-buttons__cta--continue"
        href="/slug?slug=/homepage"
      >
        Continue Shopping
      </a>
    </Link>
    <Link
      className="o-button--sml c-cart-summary-buttons__cta c-cart-summary-buttons__cta--proceed"
      href="/checkout/payment-method"
    >
      <a
        className="o-button--sml c-cart-summary-buttons__cta c-cart-summary-buttons__cta--proceed"
        href="/checkout/payment-method"
      >
        Checkout
      </a>
    </Link>
  </section>
</CartTableSummary>
`;

exports[`renders correct messages when loading shipping methods 1`] = `
<CartTableSummary
  cart={
    Object {
      "channel": "web",
      "created_at": "2019-01-07T14:28:02Z",
      "discount_summaries": Array [
        Object {
          "id": "2918ed5e-2515-4603-b22f-aa1487304f05",
          "name": "£1.50 off all orders",
          "promotion_id": 21,
          "total": 1.5,
        },
      ],
      "email": "",
      "free_shipping": false,
      "id": 151,
      "line_items": Array [
        Object {
          "cart_id": 151,
          "container_id": 151,
          "gift": false,
          "id": "311",
          "item": Object {
            "available_to_browse": true,
            "available_to_order": true,
            "created_at": "2018-09-24T15:43:00Z",
            "current_price": 6.77,
            "deleted_at": null,
            "description": "Product 40 - variant 1 Grown at an altitude of 4, 500 feet, the tea bush 'wakes' after the winter in April and produces delicate white buds, which often have a white down on them.They are picked by hand and sun- dried so that fermentation cannot take place. Very little white tea is produced, as this process requires particular care, increasing its rarity and making it highly sought after by tea buyers all over the world. It has a delicate flavour, so is best drunk without milk.",
            "ewis_eligible": false,
            "has_assets": true,
            "id": "321",
            "meta_attributes": Object {},
            "ordered_total": 10,
            "picture_url": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/131/1537803713.5364385-SCS-04-CJ_coffee_jug_600ml.jpg",
            "price": 6.77,
            "price_includes_taxes": true,
            "product": Object {
              "attribute_merchandising": Object {},
              "available_to_browse": true,
              "average_rating": 0,
              "canonical_path": "/jugs/seed_product_40",
              "category_ids_cache": Array [
                57,
              ],
              "content_type": "html",
              "created_at": "2018-09-24T15:43:00Z",
              "description": "Grown at an altitude of 4,500 feet, the tea bush 'wakes' after the winter in April and produces delicate white buds, which often have a white down on them. They are picked by hand and sun-dried so that fermentation cannot take place. Very little white tea is produced, as this process requires particular care, increasing its rarity and making it highly sought after by tea buyers all over the world. It has a delicate flavour, so is best drunk without milk.",
              "ewis_status": "not_ewis_eligible",
              "has_assets": true,
              "id": "164",
              "max_current_price": 90.31,
              "max_price": 90.31,
              "merchandised": true,
              "merged_attribute_merchandising": Object {},
              "meta_attributes": Object {},
              "min_current_price": 6.77,
              "min_price": 6.77,
              "picture_url": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/131/1537803713.5364385-SCS-04-CJ_coffee_jug_600ml.jpg",
              "published": true,
              "rating": 0,
              "reference": "seed_product_40",
              "sellable": true,
              "seo_meta_description": "Product 40 - Qui sed maiores occaecati.",
              "seo_meta_keywords": "minus, ut, ut, adipisci, consequatur",
              "seo_meta_title": "SCS-04-CJ coffee jug 600ml",
              "slug": "jugs/seed_product_40",
              "title": "SCS-04-CJ coffee jug 600ml",
              "updated_at": "2018-11-21T10:16:59Z",
              "web_product_description": "Product 40 - Totam aut quo facere.",
              "web_product_name": "SCS-04-CJ coffee jug 600ml",
            },
            "product_id": 164,
            "reference": "est_36_1",
            "sku": "3008557600817",
            "stock_allocated_level": 15,
            "stock_available_level": 85,
            "stock_level": 100,
            "tax_code": "vat",
            "title": "Variant 1",
            "updated_at": "2018-11-20T13:18:46Z",
          },
          "item_id": 321,
          "item_type": "Variant",
          "line_item_discounts": Array [
            Object {
              "id": "2a720d8d-ae39-462e-b2e2-4c49ca5c8846",
              "line_item_number": 1,
              "promotion_id": 21,
              "total": 1.5,
            },
          ],
          "sku": "3008557600817",
          "stock_available_level": 85,
          "sub_total": 6.77,
          "tax": 0.88,
          "tax_rate": "0.2",
          "title": "Variant 1",
          "total": 5.27,
          "total_discount": 1.5,
          "unit_price": 6.77,
          "unit_quantity": 1,
        },
      ],
      "line_items_count": 2,
      "meta_attributes": Object {},
      "shipping_method": Object {
        "total": 3.45,
      },
      "shipping_total": 3.45,
      "shipping_total_discount": 0,
      "sub_total": 6.77,
      "tax": 0.88,
      "test": false,
      "total": 5.27,
      "total_discount": 1.5,
      "updated_at": "2019-01-07T14:32:05Z",
    }
  }
  loading={true}
>
  <section
    className="c-cart-summary"
  >
    <dl>
      <dt>
        <a>
          Total Price:
        </a>
      </dt>
      <dd>
        <a>
          £
          6.77
        </a>
      </dd>
    </dl>
    <dl
      className="c-cart-summary__promotion"
      key="2918ed5e-2515-4603-b22f-aa1487304f05"
    >
      <dt>
        £1.50 off all orders
      </dt>
      <dd>
        - £
        1.50
      </dd>
    </dl>
    <dl>
      <dt>
        <a>
          Estimating shipping cost...
        </a>
      </dt>
    </dl>
    <dl>
      <dt>
        <p
          className="u-bold"
        >
          TOTAL:
        </p>
      </dt>
      <dd>
        <p
          className="u-bold"
        >
          £
        </p>
      </dd>
    </dl>
    <dl>
      <a>
        * Including VAT
      </a>
    </dl>
  </section>
  <section
    className="c-cart-summary-buttons"
  >
    <Link
      as="/"
      className="o-button--sml c-cart-summary-buttons__cta c-cart-summary-buttons__cta--continue"
      href="/slug?slug=/homepage"
    >
      <a
        as="/"
        className="o-button--sml c-cart-summary-buttons__cta c-cart-summary-buttons__cta--continue"
        href="/slug?slug=/homepage"
      >
        Continue Shopping
      </a>
    </Link>
    <Link
      className="o-button--sml c-cart-summary-buttons__cta c-cart-summary-buttons__cta--proceed"
      href="/checkout/payment-method"
    >
      <a
        className="o-button--sml c-cart-summary-buttons__cta c-cart-summary-buttons__cta--proceed"
        href="/checkout/payment-method"
      >
        Checkout
      </a>
    </Link>
  </section>
</CartTableSummary>
`;
